Added solution to LeetCode #498, cleaned up, upgraded to Java 17