@@ -12,9 +12,9 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <java.version>16</java.version>
+    <java.version>17</java.version>
 
-    <junit.version>5.7.1</junit.version>
+    <junit.version>5.8.1</junit.version>
 
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
@@ -49,9 +49,6 @@
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>--enable-preview</compilerArgs>
-          <source>16</source>
-          <target>16</target>
         </configuration>
       </plugin>
 
@@ -59,9 +56,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
     </plugins>
 
